<resources>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="next_step">다음</string>
    <string name="en_ok">OK</string>
    <string name="credit">%1$s학점</string>
    <string name="grade">%1$s학년</string>
    <string name="app_name">한강</string>
    <string name="title_home">홈</string>
    <string name="title_evaluation">강의평</string>
    <string name="title_lecture_bank">강의자료</string>
    <string name="title_timetable">시간표</string>
    <string name="title_mypage">마이페이지</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="date_before">전</string>
    <string name="date_after">후</string>
    <string name="date_second">%1$d초</string>
    <string name="date_minute">%1$d분</string>
    <string name="date_hour">%1$d시간</string>
    <string name="date_day">%1$d일</string>
    <string name="date_week">%1$d주</string>
    <string name="date_month">%1$d개월</string>
    <string name="date_year">%1$d년</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password">비밀번호</string>
    <string name="koreatech_email">KOREATECH 이메일</string>
    <string name="forgot_password_ask">비밀번호를 잊어버리셨나요?</string>
    <string name="login_text">로그인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="no_account_ask">아직 계정이 없으신가요?</string>
    <string name="join_in">회원가입</string>
    <string name="write_school_email">학교 이메일을 적어주세요.</string>
    <string name="send_authnum_school_email">학교 이메일로 인증번호가 전송됩니다.</string>
    <string name="check_authnum_or_email">인증번호나 아우누리 메일을 다시 확인하여 주세요.\n이메일 인증 완료 후 서비스를 이용할 수 있습니다."</string>
    <string name="id">아이디</string>
    <string name="nickname">닉네임</string>
    <string name="available_nickname">사용 가능한 닉네임입니다.</string>
    <string name="select_major">전공 선택</string>
    <string name="sign_up_complete_dialog_title">회원가입이 되었습니다.</string>
    <string name="email_koreatech">"\@koreatech.ac.kr"</string>
    <string name="sign_up_complete_dialog_message">%s님!\n한기대의 강의평가를 보러 가볼까요?</string>
    <string name="sign_up_email_config_error_message">인증번호가 일치하지 않습니다!</string>
    <string name="sign_up_email_duplicated_error_message">이미 가입된 이메일입니다!</string>
    <string name="sign_up_email_five_limit_title">인증 횟수가 초과되었습니다.</string>
    <string name="sign_up_email_five_limit_message">하루 최대 5번의 인증 횟수가\n만료되어 24시간 이후에 이용하실 수 있습니다.</string>
    <string name="sign_up_major_limit_message">"전송은 최대 2개까지만 선택 가능합니다" </string>
    <string name="reset_password_app_bar_title">비밀번호 찾기</string>
    <string name="reset_password_auth_koreatech_email_title">학교 이메일 인증</string>
    <string name="reset_password_auth_number_title">인증번호</string>
    <string name="reset_password_auth_koreatech_email_hint">비밀번호 찾기를 위해 이용</string>
    <string name="reset_password_auth_number_hint">인증번호를 입력해주세요</string>
    <string name="reset_password_send_auth_number">인증번호 전송</string>
    <string name="reset_password_resend_auth_number">재전송</string>
    <string name="reset_password_finish_email_auth">인증 완료</string>
    <string name="reset_password_new_password">새 비밀번호</string>
    <string name="goto_aunuri">아우누리 바로가기</string>
    <string name="reset_password_confirm_new_password">새 비밀번호 확인</string>
    <string name="reset_password_new_password_hint">영문, 숫자, 특수기호 반드시 포함 8자~15자</string>
    <string name="reset_password_confirm_new_password_hint">비밀번호를 한번 더 입력해주세요</string>
    <string name="reset_password_apply_new_password">비밀번호 변경</string>
    <string name="reset_password_dialog_resent_title">재전송 되었습니다.</string>
    <string name="reset_password_dialog_sent_title">전송 되었습니다.</string>
    <string name="reset_password_dialog_check_portal_message">아우누리 메일을 확인해주세요.\n이메일 인증 완료 후 서비스를 이용할 수 있습니다.</string>
    <string name="reset_password_retry_auth">다시 인증하기</string>
    <string name="reset_password_error_auth">인증 오류</string>
    <string name="reset_password_regex_error_not_included">%1$s가 포함되어있지 않습니다.</string>
    <string name="reset_password_regex_error_not_included_reason_number">숫자</string>
    <string name="reset_password_regex_error_not_included_reason_english">영문자</string>
    <string name="reset_password_regex_error_not_included_reason_specials">특수문자</string>
    <string name="reset_password_regex_error_no_inputs">비밀번호를 입력해 주세요.</string>
    <string name="reset_password_regex_error_included_not_supported_characters">비밀번호로 사용할 수 없는 문자가 있습니다.</string>
    <string name="reset_password_regex_error_too_short">비밀번호는 8자 이상이어야 합니다.</string>
    <string name="reset_password_regex_error_too_long">비밀번호는 15자 이하여야 합니다.</string>
    <string name="reset_password_finished_title">비밀번호가 변경되었습니다</string>
    <string name="reset_password_finished_message">한기대의 강의평가를 보러 가볼까요?</string>
    <string name="reset_password_finished_positive_button">로그인하러 가기</string>
    <string name="mechanical_engineering">기계공학부</string>
    <string name="design_engineering">디자인·건축공학부</string>
    <string name="design_engineering_normal">디자인건축공학부</string>
    <string name="mechatronics_engineering">메카트로닉스공학부</string>
    <string name="industrial_management">산업경영학부</string>
    <string name="energy_engineering">에너지신소재화학공학부</string>
    <string name="electronic_engineering">전기전자통신공학부</string>
    <string name="computer_engineering">컴퓨터공학부</string>
    <string name="agree_to_term">약관 동의</string>
    <string name="agree_to_under_term">아래 약관에 모두 동의합니다</string>
    <string name="personal_to_term">개인정보 이용약관(필수)</string>
    <string name="article_one_perpose">제1조(목적)</string>
    <string name="article_one_perpose_text_1">한강 서비스 이용약관은 bcsd lab에서 서비스를 제공함에</string>
    <string name="article_one_perpose_text_2">있어, 이용자간의 관리, 의무 및 책임 사항 등을 목적으로</string>
    <string name="article_one_perpose_text_3">합니다.</string>
    <string name="use_to_term">한강 이용약관(필수)</string>
    <string name="community_rule">커뮤니티 이용규칙</string>
    <string name="community_rule_text_1">한강 서비스 이용약관은 bcsd lab에서 서비스를 제공함에</string>
    <string name="community_rule_text_2">있어, 이용자간의 관리, 의무 및 책임 사항 등을 목적으로</string>
    <string name="home_title_lacture_ranking">강의랭킹</string>
    <string name="home_title_find_by_major">학부별 탐색</string>
    <string name="home_title_my_timetable">내 시간표</string>
    <string name="home_no_timetable_message">아직 작성한 시간표가 없습니다.</string>
    <string name="home_new_timetable">작성하러 가기</string>
    <string name="home_no_recommended_lectures_message">시간표를 작성하지 않았거나 업로드된 강의자료가 없습니다.</string>
    <string name="home_title_recommended_lectures">추천 강의자료</string>
    <string name="home_no_recent_lectures_message">최근에 본 강의평이 없습니다.</string>
    <string name="home_title_recent_lectures">최근 본 강의</string>
    <string name="login_error_text">가입하지 않은 아이디거나, 잘못된 비밀번호 입니다.</string>
    <string name="timetable_add_manually">직접 추가</string>
    <string name="timetable_add_lecture_hint">교과명, 교수명, 키워드 검색</string>
    <string name="lecture_list_button_review">강의평</string>
    <string name="lecture_list_add_lecture">담기</string>
    <string name="lecture_list_remove_lecture">빼기</string>
    <string name="timetable_lecture_filter_message">필터를 적용해 보세요.</string>
    <string name="timetable_lecture_filter_criteria">기준</string>
    <string name="timetable_lecture_filter_by_name">교과명</string>
    <string name="timetable_lecture_filter_by_professor">교수명</string>
    <string name="timetable_lecture_filter_by_classification">유형</string>
    <string name="timetable_lecture_filter_by_classification_liberal_required">교양필수</string>
    <string name="timetable_lecture_filter_by_classification_liberal_choice">교양선택</string>
    <string name="timetable_lecture_filter_by_classification_major_required">전공필수</string>
    <string name="timetable_lecture_filter_by_classification_major_choice">전공선택</string>
    <string name="timetable_lecture_filter_by_classification_msc_required">MSC필수</string>
    <string name="timetable_lecture_filter_by_classification_msc_choice">MSC선택</string>
    <string name="timetable_lecture_filter_by_classification_hrd_required">HRD필수</string>
    <string name="timetable_lecture_filter_by_classification_hrd_choice">HRD선택</string>
    <string name="timetable_lecture_filter_apply">적용</string>
    <string name="timetable_lecture_filter_reset">초기화</string>
    <string name="timetable_list_title">시간표 목록</string>
    <string name="timetable_list_limit_message">※ 학기 당 5개, 총 50개의 시간표를 추가할 수 있습니다.</string>
    <string name="timetable_list_add_timetable">추가</string>
    <string name="timetable_add_title">시간표 추가</string>
    <string name="timetable_add_timetable_name">시간표 이름</string>
    <string name="timetable_add_timetable_name_hint">시간표 이름을 입력해주세요.</string>
    <string name="timetable_add_semester_message">이번 연도 시간표만 생성 가능합니다.</string>
    <string name="timetable_add_semester_1">1학기</string>
    <string name="timetable_add_semester_2">여름학기</string>
    <string name="timetable_add_semester_3">2학기</string>
    <string name="timetable_add_semester_4">겨울학기</string>
    <string name="timetable_add_finish">완료</string>
    <string name="major_simple_dip">찜</string>
    <string name="semester_20191">2019년 1학기</string>
    <string name="semester_20192">2019년 2학기</string>
    <string name="semester_20201">2020년 1학기</string>
    <string name="semester_20202">2020년 2학기</string>
    <string name="semester_20211">2021년 1학기</string>
    <string name="menu_item_set_main_timetable">메인 시간표 설정</string>
    <string name="menu_item_save_image">이미지 저장</string>
    <string name="menu_item_edit_timetable_name">이름 수정</string>
    <string name="menu_item_remove_timetable">시간표 삭제</string>
    <string name="time_09">09</string>
    <string name="time_17">17</string>
    <string name="time_16">16</string>
    <string name="time_15">15</string>
    <string name="time_14">14</string>
    <string name="time_13">13</string>
    <string name="time_12">12</string>
    <string name="time_11">11</string>
    <string name="time_10">10</string>
    <string name="timetable_dialog_finish_main_timetable_title">메인 시간표 설정이 완료되었습니다.</string>
    <string name="timetable_dialog_finish_main_timetable_message">해당 시간표가 메인으로 나타납니다.</string>
    <string name="apologize">죄송합니다.</string>
    <string name="ranking_fail_message_1">강의랭킹을</string>
    <string name="ranking_fail_message_2">불러오지 못하였습니다.</string>
    <string name="retry">재시도</string>
    <string name="apply_filter">필터를 적용해 보세요.</string>
    <string name="sort">정렬</string>
    <string name="sort_by_1">평점순</string>
    <string name="sort_by_2">평가순</string>
    <string name="sort_by_3">최신순</string>
    <string name="lecture_filter_type">유형</string>
    <string name="lecture_filter_type_1">교양필수</string>
    <string name="lecture_filter_type_2">교양선택</string>
    <string name="lecture_filter_type_3">전공필수</string>
    <string name="lecture_filter_type_4">전공선택</string>
    <string name="lecture_filter_type_5">MSC필수</string>
    <string name="lecture_filter_type_6">MSC선택</string>
    <string name="lecture_filter_type_7">HRD필수</string>
    <string name="lecture_filter_type_8">HRD선택</string>
    <string name="hash_tag">해시태그</string>
    <string name="hash_tag1">#그저그러함</string>
    <string name="hash_tag2">#학점왤케짜</string>
    <string name="hash_tag3">#리얼수면제</string>
    <string name="hash_tag4">#수업개빡셈</string>
    <string name="hash_tag5">#배운거많음</string>
    <string name="hash_tag6">#좋은교수님</string>
    <string name="hash_tag7">#진심꿀과목</string>
    <string name="hash_tag8">#이거듣지마</string>
    <string name="hash_tag9">#조금아쉬움</string>
    <string name="lecture_review_filter_reset">초기화</string>
    <string name="lecture_review_filter_apply">적용</string>
</resources>