<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragmentData"
            type="in.hangang.hangang.ui.lecturereview.fragment.LectureReviewFilterFragment" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/lecture_review_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/ic_x"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lecture_review_guide_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/apply_filter"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/lecture_review_close_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/review_filter_sort_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lecture_review_guide_message"
            android:layout_marginTop="24dp"
            android:textColor="@color/black2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/sort"
            tools:text="정렬" />
        <LinearLayout
            android:id="@+id/lecture_review_radiogroup_linearlyaout"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_filter_sort_title">
            <RadioGroup
                android:id="@+id/lecture_review_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <in.hangang.core.view.button.radiobutton.FilledRadioButton
                    android:id="@+id/sort_by_total_rating"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="@color/black2"
                    android:text="@string/sort_by_1"/>
                <in.hangang.core.view.button.radiobutton.FilledRadioButton
                    android:id="@+id/sort_by_review_count"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="@color/black2"
                    android:layout_marginLeft="8dp"
                    android:text="@string/sort_by_2"/>
                <in.hangang.core.view.button.radiobutton.FilledRadioButton
                    android:id="@+id/sort_by_latest"
                    android:layout_width="64dp"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="@color/black2"
                    android:layout_marginLeft="8dp"
                    android:text="@string/sort_by_3"/>

            </RadioGroup>

        </LinearLayout>


        <TextView
            android:id="@+id/lecture_filter_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecture_filter_type"
            android:textColor="@color/black2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lecture_review_radiogroup_linearlyaout"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/type_filter_1"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/lecture_filter_type_1"
            android:checked="@{fragmentData.filterTypeIsChecked[0]}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/type_filter_2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@+id/lecture_filter_type_title"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/type_filter_2"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:text="@string/lecture_filter_type_2"
            android:checked="@{fragmentData.filterTypeIsChecked[1]}"
            app:layout_constraintStart_toEndOf="@+id/type_filter_1"
            app:layout_constraintEnd_toStartOf="@+id/type_filter_3"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="@+id/type_filter_1"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/type_filter_3"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:text="@string/lecture_filter_type_3"
            android:checked="@{fragmentData.filterTypeIsChecked[2]}"
            app:layout_constraintStart_toEndOf="@+id/type_filter_2"
            app:layout_constraintTop_toTopOf="@+id/type_filter_1"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toStartOf="@+id/type_filter_4"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/type_filter_4"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:text="@string/lecture_filter_type_4"
            android:checked="@{fragmentData.filterTypeIsChecked[3]}"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/type_filter_3"
            app:layout_constraintTop_toTopOf="@+id/type_filter_1"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/type_filter_5"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:layout_marginTop="13dp"
            android:text="@string/lecture_filter_type_5"
            android:checked="@{fragmentData.filterTypeIsChecked[4]}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/type_filter_6"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@+id/type_filter_1"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/type_filter_6"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:text="@string/lecture_filter_type_6"
            android:checked="@{fragmentData.filterTypeIsChecked[5]}"
            app:layout_constraintStart_toEndOf="@+id/type_filter_5"
            app:layout_constraintEnd_toStartOf="@+id/type_filter_7"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toTopOf="@+id/type_filter_5"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/type_filter_7"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:text="@string/lecture_filter_type_7"
            android:checked="@{fragmentData.filterTypeIsChecked[6]}"
            app:layout_constraintStart_toEndOf="@+id/type_filter_6"
            app:layout_constraintTop_toTopOf="@+id/type_filter_5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintEnd_toStartOf="@+id/type_filter_8"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/type_filter_8"
            android:layout_width="77dp"
            android:layout_height="32dp"
            android:text="@string/lecture_filter_type_8"
            android:checked="@{fragmentData.filterTypeIsChecked[7]}"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/type_filter_7"
            app:layout_constraintTop_toTopOf="@+id/type_filter_5"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/hash_tag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/hash_tag"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type_filter_5"
            />
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/hash_tag_type_1"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/hash_tag1"
            android:checked="@{fragmentData.filterHashTagIsChecked[0]}"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hash_tag_type_2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@+id/hash_tag_title"/>

        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/hash_tag_type_2"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:text="@string/hash_tag2"
            android:checked="@{fragmentData.filterHashTagIsChecked[1]}"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/hash_tag_type_1"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@+id/hash_tag_type_1"
            app:layout_constraintEnd_toStartOf="@+id/hash_tag_type_3"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/hash_tag_type_3"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:text="@string/hash_tag3"
            android:checked="@{fragmentData.filterHashTagIsChecked[2]}"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/hash_tag_type_2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@+id/hash_tag_type_1"
            app:layout_constraintEnd_toEndOf="parent"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/hash_tag_type_4"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/hash_tag4"
            android:checked="@{fragmentData.filterHashTagIsChecked[3]}"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hash_tag_type_5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@+id/hash_tag_type_1"/>

        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/hash_tag_type_5"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:text="@string/hash_tag5"
            android:checked="@{fragmentData.filterHashTagIsChecked[4]}"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/hash_tag_type_4"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@+id/hash_tag_type_4"
            app:layout_constraintEnd_toStartOf="@+id/hash_tag_type_6"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/hash_tag_type_6"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:text="@string/hash_tag6"
            android:checked="@{fragmentData.filterHashTagIsChecked[5]}"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/hash_tag_type_5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@+id/hash_tag_type_4"
            app:layout_constraintEnd_toEndOf="parent"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/hash_tag_type_7"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/hash_tag7"
            android:checked="@{fragmentData.filterHashTagIsChecked[6]}"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hash_tag_type_8"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@+id/hash_tag_type_4"/>

        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/hash_tag_type_8"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:text="@string/hash_tag8"
            android:checked="@{fragmentData.filterHashTagIsChecked[7]}"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/hash_tag_type_7"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@+id/hash_tag_type_7"
            app:layout_constraintEnd_toStartOf="@+id/hash_tag_type_9"/>
        <in.hangang.core.view.button.checkbox.FilledCheckBox
            android:id="@+id/hash_tag_type_9"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:text="@string/hash_tag9"
            android:checked="@{fragmentData.filterHashTagIsChecked[8]}"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/hash_tag_type_8"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toTopOf="@+id/hash_tag_type_7"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/lecture_review_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="38dp"
            app:layout_constraintTop_toBottomOf="@+id/hash_tag_type_9">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_refresh"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/lecture_review_filter_reset"
                android:textSize="14sp"
                android:textColor="@color/gray_500"/>
        </LinearLayout>
        <in.hangang.core.view.button.RoundedCornerButton
            android:id="@+id/lecture_review_filter_apply_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/color_state_button_blue"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/lecture_review_filter_apply"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@+id/lecture_review_filter_button"
            app:layout_constraintBottom_toBottomOf="parent"/>





    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>